# Longest-Adjacent-Sequence

./: README.md
LongestSequenceComplete/: CMakeLists.txt
LongestSequenceComplete/include/: CMakeLists.txt
LongestSequenceComplete/include/src/includes/: longestSequence.c  longestSequence.h
LongestSequenceComplete/main/: CMakeLists.txt  main.c  runFunc.c  runFunc.h
Multiple Files/: longestSequence.c  longestSequence.h  main.c  test_1
NewFIle/: a.out  file.c  longestSequence.c  longestSequence.h  main.c  test_4
Working-Task4/: longestSequence.c  main.c
